| Summary: | ASTERISK-25309: [patch] iLBC 20 advertised | ||||
| Reporter: | Alexander Traud (traud) | Labels: | |||
| Date Opened: | 2015-08-10 07:49:07 | Date Closed: | 2015-08-12 13:38:16 | ||
| Priority: | Major | Regression? | |||
| Status: | Closed/Complete | Components: | Channels/chan_sip/CodecHandling | ||
| Versions: | SVN 13.5.0 | Frequency of Occurrence | Constant | ||
| Related Issues: |
| ||||
| Environment: | Attachments: | ( 0) asterisk_iLBC_30.patch | |||
| Description: | Since version 13, chan_sip advertises iLBC 20. However, only iLBC 30 is implemented in the transcoding module of Asterisk. When the callee accepts iLBC 20, this negotiates ilBC 20 (see [RFC 3952|https://tools.ietf.org/html/rfc3952#section-5] section 5) and creates a call without audio.
This was caused because chan_sip queried a property ({{framing}}) included in the capabilities of a channel ({{ast_format_cap}}). However, the framing of a channel (ptime) does not change the iLBC variant. Furthermore, because iLBC 30 is the default variant, and reading the RFC literally – {{a=fmtp:xx mode=30}} is not defined in the RFC – the second part of this patch removes sending of a=fmtp for iLBC in SIP/SDP at all. That way, chan_sip offers iLBC 30 for sure. This bug was not reproducible in Asterisk 11 or earlier. | ||||
| Comments: | |||||